style: fixed responsive on small height devices

--- a/src/components/Box/style.css
+++ b/src/components/Box/style.css
@@ -42,3 +42,22 @@
     }
   }
 }
+
+@media screen and (max-height: 800px) {
+  .box {
+    margin-top: -60px;
+    gap: 5px;
+    padding: 20px 30px;
+
+    & h2 {
+      color: hsl(213, 96%, 18%);
+      font-size: 30px;
+    }
+
+    & p {
+      line-height: 20px;
+      font-size: 15px;
+      margin-bottom: 10px;
+    }
+  }
+}
