--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -1,19 +1,26 @@
-button{
-    padding: 18px 30px;
-      border-radius: 6px;
-      border: none;
-      background-color: hsl(213, 96%, 18%);
-      color: white;
-      transition: all 0.3s ease;
-      font-size: 20px;
+button {
+  padding: 18px 30px;
+  border-radius: 6px;
+  border: none;
+  background-color: hsl(213, 96%, 18%);
+  color: white;
+  transition: all 0.3s ease;
+  font-size: 20px;
 
-      &:hover {
-        opacity: 0.7;
-      }
+  &:hover {
+    opacity: 0.7;
+  }
 }
 
-.backBtn{
+.backBtn {
   background-color: transparent;
   color: hsl(231, 11%, 63%);
   padding: 18px 5px;
+}
+
+@media screen and (max-height: 800px) {
+  button {
+    padding: 13px 20px;
+    font-size: 18px;
+  }
 }
