--- a/src/components/StepMenu/style.css
+++ b/src/components/StepMenu/style.css
@@ -107,3 +107,11 @@
     }
   }
 }
+
+@media screen and (max-height: 800px) {
+  .stepMenu {
+    .steps{
+      top: -30px;
+    }
+  }
+}
