--- a/src/pages/SelectPlan/style.css
+++ b/src/pages/SelectPlan/style.css
@@ -48,6 +48,7 @@
       & span {
         color: hsl(213, 96%, 18%);
         font-size: 15px;
+        margin-top: 3px;
       }
 
       & img {
@@ -62,6 +63,7 @@
 
       & p {
         font-size: 18px;
+        margin: 0;
       }
     }
   }
@@ -108,6 +110,15 @@
   }
 }
 
+@media screen and (max-width: 475px) {
+  .plan-method {
+    gap: 10px;
+    & button {
+      font-size: 14px;
+    }
+  }
+}
+
 @media screen and (min-width: 1000px) {
   .selectPlan {
     justify-content: center;
@@ -139,6 +150,32 @@
             }
           }
         }
+      }
+    }
+  }
+}
+
+@media screen and (max-height: 800px) {
+  .options {
+    gap: 10px;
+
+    & label {
+      padding: 12px 20px !important;
+
+      & img {
+        width: 40px !important;
+      }
+
+      & h1 {
+        font-size: 16px !important;
+      }
+
+      & span {
+        font-size: 14px !important;
+      }
+
+      & p {
+        font-size: 14px !important;
       }
     }
   }
