--- a/src/pages/Summary/style.css
+++ b/src/pages/Summary/style.css
@@ -103,3 +103,20 @@
     align-items: flex-start;
   }
 }
+
+@media screen and (max-height: 800px) {
+  .summary {
+    & .addItem {
+      & p {
+        margin: 0;
+      }
+    }
+
+    & .total {
+      margin-top: 10px;
+      & p {
+        margin: 0;
+      }
+    }
+  }
+}
